# lipsum-cpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  Makefile  PKGBUILD  README.md  TODO.md  format.sh
.github/workflows/: build.yml
cmake/: README.md  docs.cmake  examples.cmake  format.cmake  install.cmake  optcomp.cmake  options.cmake  sample.cmake  targets.cmake  toolchain-mingw.cmake  version.cmake
examples/: Advanced.cpp  Basic.cpp  CMakeLists.txt  CWrapper.c  CompressionBenchmarks.cpp  FontViewer.html  Formats.cpp  FuncsX.cpp  GenerateDefaultLipsumSentence.cpp  GenerateMarkdownEmphasis.cpp  GenerateMarkdownHeader.cpp  GenerateMarkdownLink.cpp  GenerateMarkdownList.cpp  GenerateMarkdownParagraph.cpp  GenerateMarkdownParagraphs.cpp  GenerateMarkdownText.cpp  GenerateParagraph.cpp  GenerateParagraphs.cpp  GenerateSentence.cpp  GenerateSentenceFragment.cpp  GenerateSentences.cpp  GenerateSlug.cpp  GenerateText.cpp  GenerateURL.cpp  GenerateWord.cpp  GenerateWords.cpp  Generator.cpp  GeneratorFormats.cpp  HTMLify.cpp  JSBinding.html  Markdown.cpp  Misc.cpp  ParserStressTest.cpp  README.md  Source.cpp  WebInterface.html  WebInterface.js  sample.txt
scripts/: README.md  amalgamate.sh  corporateipsum.txt  dogipsum.txt  format.sh  lipsum.txt  server.sh  split.py  version.cmake
src/: README.md  lipsum.cpp  lipsum.h  lipsum.hpp  lipsum.inl  lipsum_h.cpp  lipsum_static.cpp
src/cli/: CMakeLists.txt  README.md  interactive.cpp  main.cpp
src/jsbind/: CMakeLists.txt  README.md  lipsum_binding_js.cpp
src/lipsum/: argvec2.hpp  argvec2.inl  core.hpp  core_funcs.hpp  core_funcs.inl  core_xfuncs.hpp  core_xfuncs.inl  formats.hpp  formats.inl  generator.hpp  generator.inl  generatorcore.inl  generatorformats.inl  generatorsettings.hpp  internal.hpp  internal.inl  markdown.hpp  markdown.inl  md_xfuncs.hpp  misc.hpp  misc.inl  sample.inl  source.hpp  source.inl  xfuncs.inl
src/lipsum/core/: argvec2.hpp  argvec2.inl  core.hpp  internal.hpp  internal.inl  sample.inl  source.hpp  source.inl  stdincludes.hpp  version.hpp
src/lipsumc/: README.md  binded.h  binded.inl  core.h  sfuncs.h  sfuncs.inl  version.h
src/test/: CMakeLists.txt  main.cpp
