cmake_minimum_required(VERSION 3.15)
project(lipsum-cpp VERSION 0.3.6 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/options.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/sample.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/docs.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/examples.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/optcomp.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/format.cmake")
if(LPSM_BUILD_STATIC)
    add_library(lipsum-cpp STATIC "${LPSM_SRCS}")
    target_compile_definitions(lipsum-cpp PUBLIC LIPSUM_BUILD_STATIC)
    target_include_directories(lipsum-cpp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
elseif(LPSM_BUILD_SHARED)
    add_library(lipsum-cpp SHARED "${LPSM_SRCS}")
    target_compile_definitions(lipsum-cpp PUBLIC LIPSUM_BUILD_STATIC)
    target_compile_definitions(lipsum-cpp PUBLIC LIPSUM_BUILD_SHARED)
    target_compile_definitions(lipsum-cpp PRIVATE LIPSUM_EXPORT_SHARED)
    target_include_directories(lipsum-cpp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
else()
    # single header
    add_library(lipsum-cpp INTERFACE)
    target_include_directories(lipsum-cpp INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/src")
endif()

